V3-5.1: BE notifications read API (list/unread/mark-read) + N-3 payment_recorded
